--- a/src/frontend/app/app.fxml
+++ b/src/frontend/app/app.fxml
@@ -7,10 +7,14 @@
 <?import javafx.scene.layout.*?>
 
 
-<VBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
+<AnchorPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
 	fx:controller="frontend.app.AppController" stylesheets="@app-style.css">
 	<children>
-		<fx:include fx:id="topMenu" source="top-menu.fxml" />
-		<fx:include fx:id="sessions" source="sessions.fxml" />
+		<fx:include fx:id="topMenu" source="top-menu.fxml" /> 
+		<!-- This top anchor value is currently hard coded,
+		     but should just be the height of the topMenu -->
+		<fx:include fx:id="sessions" source="sessions.fxml" 
+			AnchorPane.topAnchor="37.0" AnchorPane.bottomAnchor="0" 
+			AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" />
 	</children>
-</VBox>
+</AnchorPane>
