--- a/src/frontend/app/main-screen.fxml
+++ b/src/frontend/app/main-screen.fxml
@@ -7,40 +7,36 @@
 <?import javafx.scene.layout.*?>
 
 
-<HBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.app.SessionsController">
-	<children>
-		<SplitPane orientation="HORIZONTAL" prefHeight="400"
-			prefWidth="400">
+<SplitPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
+	fx:controller="frontend.app.SessionsController" orientation="HORIZONTAL">
+	<items>
+	
+		<SplitPane orientation="VERTICAL">
 			<items>
-				<SplitPane orientation="VERTICAL">
-					<items>
-						<fx:include source="subscreens/turtle-screen.fxml" />
-						<fx:include source="subscreens/input-screens.fxml" />
-					</items>
-				</SplitPane>
-
-				<VBox>
-					<children>
-						<TitledPane text="variables">
-							<content>
-								<fx:include source="subscreens/variables-screen.fxml" />
-							</content>
-						</TitledPane>
-						<TitledPane text="commands">
-							<content>
-								<fx:include source="subscreens/commands-screen.fxml" />
-							</content>
-						</TitledPane>
-						<TitledPane text="history">
-							<content>
-								<fx:include source="subscreens/history-screen.fxml" />
-							</content>
-						</TitledPane>
-					</children>
-				</VBox>
-
+				<fx:include source="subscreens/turtle-screen.fxml" />
+				<fx:include source="input-screens.fxml" />
 			</items>
 		</SplitPane>
-	</children>
-</HBox>
+
+		<VBox>
+			<children>
+				<TitledPane text="variables">
+					<content>
+						<fx:include source="subscreens/variables-screen.fxml" />
+					</content>
+				</TitledPane>
+				<TitledPane text="commands">
+					<content>
+						<fx:include source="subscreens/commands-screen.fxml" />
+					</content>
+				</TitledPane>
+				<TitledPane text="history">
+					<content>
+						<fx:include source="subscreens/history-screen.fxml" />
+					</content>
+				</TitledPane>
+			</children>
+		</VBox>
+
+	</items>
+</SplitPane>
