--- a/src/frontend/app/top-menu.fxml
+++ b/src/frontend/app/top-menu.fxml
@@ -10,7 +10,8 @@
 <HBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
 	fx:controller="frontend.app.MenuController">
 	<children>
-		<Button text="%Button1" />
-		<Button text="button2" />
+		<Button text="New" />
+		<Button text="Open" />
+		<Button text="Save" />
 	</children>
 </HBox>
