--- a/src/frontend/views/variables-view.fxml
+++ b/src/frontend/views/variables-view.fxml
@@ -6,8 +6,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8">
+
+<HBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
+	fx:controller="frontend.views.VariablesController">
 	<children>
-		<Label text="Script Screen" />
+		<Label text="Variables" />
 	</children>
-</VBox>
+</HBox>
