--- a/src/frontend/views/commands-view.fxml
+++ b/src/frontend/views/commands-view.fxml
@@ -8,8 +8,8 @@
 
 
 <HBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.app.SessionsController">
+	fx:controller="frontend.views.CommandsController">
 	<children>
-		<Label text="Variables" />
+		<Label text="Commands" />
 	</children>
 </HBox>
