--- a/src/frontend/views/history-view.fxml
+++ b/src/frontend/views/history-view.fxml
@@ -8,8 +8,8 @@
 
 
 <HBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.app.SessionsController">
+	fx:controller="frontend.views.HistoryController">
 	<children>
-		<Label text="Turtle" />
+		<Label text="History" />
 	</children>
 </HBox>
