--- a/src/frontend/views/shell-view.fxml
+++ b/src/frontend/views/shell-view.fxml
@@ -6,10 +6,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<HBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.app.SessionsController">
+<VBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
+	fx:controller="frontend.views.ShellController">
 	<children>
-		<Label text="Commands" />
+		<Label text="Shell Screen" />
 	</children>
-</HBox>
+</VBox>
