--- a/src/frontend/views/turtle-view.fxml
+++ b/src/frontend/views/turtle-view.fxml
@@ -6,10 +6,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <HBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.app.SessionsController">
+	fx:controller="frontend.views.TurtleController">
 	<children>
-		<Label text="History" />
+		<Label text="Turtle" />
 	</children>
 </HBox>
