add help button, no function yet

--- a/src/frontend/app/top-menu.fxml
+++ b/src/frontend/app/top-menu.fxml
@@ -13,5 +13,6 @@
 		<Button text="New" onAction="#addNewSession" />
 		<Button text="Open" />
 		<Button text="Save" />
+		<Button text="Help" />
 	</children>
 </HBox>
