add language button (no function yet)

--- a/src/frontend/app/top-menu.fxml
+++ b/src/frontend/app/top-menu.fxml
@@ -14,5 +14,6 @@
 		<Button text="Open" />
 		<Button text="Save" />
 		<Button text="Help" />
+		<ComboBox fx:id="languageBox" />
 	</children>
 </HBox>
