--- a/src/frontend/views/turtle-view.fxml
+++ b/src/frontend/views/turtle-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 <HBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.views.TurtleController">
+	fx:controller="frontend.views.TurtleController" fx:id="turtleScreen">
 	<children>
 		<Label text="Turtle" />
 	</children>
