--- a/src/frontend/app/main-screen.fxml
+++ b/src/frontend/app/main-screen.fxml
@@ -14,7 +14,7 @@
 		<SplitPane orientation="VERTICAL">
 			<items>
 				<fx:include fx:id="turtle" source="/frontend/views/turtle-view.fxml" />
-				<TabPane side="LEFT" tabClosingPolicy="UNAVAILABLE">
+				<TabPane fx:id="inputTabPane" side="LEFT" tabClosingPolicy="UNAVAILABLE">
 					<tabs>
 						<Tab text="shell">
 							<fx:include fx:id="shell" source="/frontend/views/shell-view.fxml" />
