--- a/src/frontend/views/turtle-view.fxml
+++ b/src/frontend/views/turtle-view.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 <Pane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.views.TurtleController" fx:id="turtleScreen">
+	fx:controller="frontend.views.TurtleScreenController" fx:id="turtlePane"> 
 	<children>
-		
 	</children>
 </Pane>
