--- a/src/frontend/views/history-view.fxml
+++ b/src/frontend/views/history-view.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.*?>
 
 
-<HBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.views.HistoryController">
+<VBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
+	fx:controller="frontend.views.HistoryController" fx:id="historyBox">
 	<children>
 		<Label text="History" />
 	</children>
-</HBox>
+</VBox>
