--- a/src/frontend/app/main-screen.fxml
+++ b/src/frontend/app/main-screen.fxml
@@ -5,6 +5,7 @@
 <?import java.util.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
 
 
 <SplitPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
