--- a/src/frontend/views/history-view.fxml
+++ b/src/frontend/views/history-view.fxml
@@ -7,9 +7,10 @@
 <?import javafx.scene.layout.*?>
 
 
-<HBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.views.HistoryController">
-	<children>
-		<Label text="History" />
-	</children>
-</HBox>
+<ScrollPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
+	fx:controller="frontend.views.HistoryController" fitToHeight="true">
+	<content>
+		<VBox fx:id="historyBox" prefWidth="300"> <!-- hard coded width -->
+		</VBox>
+	</content>
+</ScrollPane>
