--- a/src/frontend/app/app-style.css
+++ b/src/frontend/app/app-style.css
@@ -8,6 +8,7 @@ VBox {
 }
 
 .history-entry {
+	-fx-alignment: center-left;
 	-fx-background-color: #FFFFFF;
 	-fx-border-width: 1 0 0 0;
 	-fx-border-color: black;
