--- a/src/frontend/app/main-screen.fxml
+++ b/src/frontend/app/main-screen.fxml
@@ -12,7 +12,7 @@
 	fx:controller="frontend.app.FrontEndController" orientation="HORIZONTAL">
 	<items>
 
-		<SplitPane orientation="VERTICAL">
+		<SplitPane orientation="VERTICAL" SplitPane.resizableWithParent="true" minWidth="0">
 			<items>
 				<fx:include fx:id="turtleScreen" source="/frontend/views/turtle-view.fxml" />
 				<TabPane fx:id="inputTabPane" side="LEFT" tabClosingPolicy="UNAVAILABLE">
@@ -29,7 +29,7 @@
 		</SplitPane>
 
 
-		<VBox>
+		<VBox SplitPane.resizableWithParent="true" minWidth="0">
 			<children>
 				<TitledPane text="variables">
 					<content>
