--- a/src/frontend/views/history-view.fxml
+++ b/src/frontend/views/history-view.fxml
@@ -8,9 +8,9 @@
 
 
 <ScrollPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.views.HistoryController" fitToHeight="true">
+	fx:controller="frontend.views.HistoryController">
 	<content>
-		<VBox fx:id="historyBox" prefWidth="300"> <!-- hard coded width -->
+		<VBox fx:id="historyBox">
 		</VBox>
 	</content>
 </ScrollPane>
