--- a/src/frontend/app/app-style.css
+++ b/src/frontend/app/app-style.css
@@ -7,13 +7,13 @@ VBox {
 	-fx-background: #FFFFFF;
 }
 
-.history-entry {
+.table-entry {
 	-fx-alignment: center-left;
 	-fx-background-color: #FFFFFF;
 	-fx-border-width: 1 0 0 0;
 	-fx-border-color: black;
 	-fx-border-style: dashed;
 }
-.history-entry:hover {
+.table-entry:hover {
   	-fx-background-color: #D3D3D3;
 }
