--- a/src/frontend/views/turtle-view.fxml
+++ b/src/frontend/views/turtle-view.fxml
@@ -9,8 +9,7 @@
 
 <Pane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
 	fx:controller="frontend.views.TurtleScreenController" fx:id="turtlePane"> 
-	<children>
-		<HBox>
-		</HBox>
-	</children>
+	<HBox fx:id = "prefButtons">
+	
+	</HBox>
 </Pane>
