--- a/src/frontend/views/turtle-view.fxml
+++ b/src/frontend/views/turtle-view.fxml
@@ -8,7 +8,8 @@
 
 
 <Pane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.views.TurtleScreenController" fx:id="turtlePane"> 
+	fx:controller="frontend.views.TurtleScreenController" fx:id="turtlePane"
+	minWidth="10.0" prefWidth="100.0"> 
 	<HBox fx:id = "prefButtons">
 	
 	</HBox>
