--- a/src/frontend/views/shell-view.fxml
+++ b/src/frontend/views/shell-view.fxml
@@ -6,9 +6,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
-	fx:controller="frontend.views.ShellController">
-	<children>
-		<Label text="Shell Screen" />
-	</children>
-</VBox>
+<ScrollPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/8"
+	fx:controller="frontend.views.ShellController" fx:id="shellBox" styleClass="shell-pane" >
+	<content>
+	</content>
+</ScrollPane>
